# url-shortener

./: Cargo.toml
migrations/: 010_create_urls_table.sql
src/: main.rs
src/models/: url.rs
src/routes/: mod.rs  url_routes.rs
